[tool.poetry]
name = "repl_python3_PokerBot"
version = "0.1.0"
description = ""
authors = ["Thrillerninja <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
matlab = "^0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
